too slow functions

--- a/web-scraping/pokedex_digger.ipynb
+++ b/web-scraping/pokedex_digger.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "c988d69e",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,30 @@
     "import time\n",
     "import os\n",
     "import shutil\n",
+    "import pickle\n",
     "\n",
     "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 81,
+   "id": "b9797ad3-2a96-4334-9c8f-9fc4f4e35362",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pokemon:\n",
+    "    def __init__(self, id, name, types):\n",
+    "        self.name=name\n",
+    "        self.id=id\n",
+    "        self.types=types\n",
+    "    def __str__(self):\n",
+    "        return f'{self.id} {self.name} -> {self.types}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "62a4a43e",
    "metadata": {},
    "outputs": [],
@@ -41,6 +58,28 @@
     "        'black-white',\n",
     "        'black-white-2'\n",
     "    ]\n",
+    "def extrair_tags_html(texto):\n",
+    "    soup = BeautifulSoup(texto, 'html.parser')\n",
+    "    tags_encontradas = soup.find_all()\n",
+    "    return tags_encontradas\n",
+    "\n",
+    "def extrair_conteudo_por_classe_e_id(texto, tag_alvo, classe_alvo=None, id_alvo=None):\n",
+    "    soup = BeautifulSoup(texto, 'html.parser')\n",
+    "\n",
+    "    atributos_alvo = {}\n",
+    "    if classe_alvo:\n",
+    "        atributos_alvo['class'] = classe_alvo\n",
+    "    if id_alvo:\n",
+    "        atributos_alvo['id'] = id_alvo\n",
+    "\n",
+    "    tag_encontrada = soup.find(tag_alvo, atributos_alvo)\n",
+    "\n",
+    "    if tag_encontrada:\n",
+    "        conteudo = tag_encontrada.text\n",
+    "        return conteudo\n",
+    "    else:\n",
+    "        return None \n",
+    "\n",
     "def get_corret_url(game):\n",
     "    global games\n",
     "    url = \"https://pokemondb.net/pokedex/game/*\"\n",
@@ -49,8 +88,8 @@
     "        if game == index+1:\n",
     "            url = url[0:len(url)-1]\n",
     "            url += games[index]\n",
-    "\n",
     "    return url\n",
+    "\n",
     "def obter_html(url):\n",
     "    try:\n",
     "        response = requests.get(url)\n",
@@ -61,6 +100,15 @@
     "    except Exception as e:\n",
     "        print(e)\n",
     "        \n",
+    "def extrair_conteudo_da_tag(texto, tag_alvo):\n",
+    "    soup = BeautifulSoup(texto, 'html.parser')\n",
+    "    tag_encontrada = soup.find(tag_alvo)\n",
+    "    if tag_encontrada:\n",
+    "        conteudo = tag_encontrada.text\n",
+    "        return conteudo\n",
+    "    else:\n",
+    "        return None \n",
+    "\n",
     "def catalogar_html(html):\n",
     "    try:\n",
     "        soup = BeautifulSoup(html, 'html.parser')\n",
@@ -126,10 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "59104da0",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -144,9 +196,21 @@
       "5 - platinum\n",
       "6 - heartgold soulsilver\n",
       "7 - black white\n",
-      "8 - black white 2\n",
+      "8 - black white 2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
       "selecione a pokedex que você deseja:\n",
-      "1\n",
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Total: 251 pokémons\n",
       "Chikorita\n",
       "Bayleef\n",
@@ -425,42 +489,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "id": "1ef79728",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O diretório 'data/' foi excluído com sucesso. seu conteudo também, com 8 arquivos\n",
-      "5.0%...\n",
-      "10.0%...\n",
-      "15.0%...\n",
-      "20.0%...\n",
-      "25.0%...\n",
-      "30.0%...\n",
-      "35.0%...\n",
-      "40.0%...\n",
-      "45.0%...\n",
-      "50.0%...\n",
-      "55.0%...\n",
-      "60.0%...\n",
-      "65.0%...\n",
-      "70.0%...\n",
-      "75.0%...\n",
-      "80.0%...\n",
-      "85.0%...\n",
-      "90.0%...\n",
-      "95.0%...\n",
+      "O diretório 'data/' foi excluído com sucesso. seu conteudo também, com 5 arquivos\n",
       "100.0%...\n",
-      "Terminado! com o tempo de 24.01409\n"
+      "Terminado! com o tempo de 1.04526\n"
      ]
     }
    ],
    "source": [
     "list_name_pokes = set_poke_name(catalogar_html(obter_html(get_corret_url(2))))\n",
-    "quantidade = 20\n",
+    "quantidade = 1\n",
     "cleardata()\n",
     "tempo_inicio = time.time()\n",
     "for i in range(quantidade):\n",
@@ -474,53 +521,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "1a6ff5ec",
+   "execution_count": 85,
+   "id": "41406eee",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "     Bulbasaur\n",
+      "    \n",
+      "    is a\n",
+      "    \n",
+      "     Grass\n",
+      "    \n",
+      "    /\n",
+      "    \n",
+      "     Poison\n",
+      "    \n",
+      "    type Pokémon introduced in\n",
+      "    \n",
+      "     Generation 1\n",
+      "    \n",
+      "    .\n",
+      "   \n",
+      "#0002 Bulbasaur -> ['Grass', 'Poison']\n"
+     ]
+    }
+   ],
+   "source": [
+    "quantidade = get_info_directory()\n",
+    "aux = None\n",
+    "for i in range(quantidade):\n",
+    "    with open(f'data/poke{i}.html', 'r') as arquivo:\n",
+    "        linhas = arquivo.readlines()\n",
+    "        aux=''.join(linhas)\n",
+    "#extrair_conteudo_por_classe_e_id(texto, tag_alvo, classe_alvo=None, id_alvo=None)\n",
+    "typePoke=[]\n",
+    "pokeType = ['Water','Electric','Dark','Fairy','Fire','Flying','Ice','Rock','Ground','Steel','Bug','Normal','Grass','Fighting','Poison',' middot ','Ghost','Psychic','Dragon']\n",
+    "for i in pokeType:\n",
+    "    sup=extrair_conteudo_por_classe_e_id(aux, \"a\", i.lower(), None)\n",
+    "    if sup != None:\n",
+    "        sup = sup.replace('\\n','')\n",
+    "        sup = sup.replace(' ','')\n",
+    "        typePoke.append(sup)\n",
+    "    if len(typePoke)==2:\n",
+    "        break\n",
+    "teste = extrair_conteudo_da_tag(aux, \"p\")\n",
+    "print(teste)\n",
+    "aux=extrair_conteudo_por_classe_e_id(aux, \"main\", None, \"main\")\n",
+    "#extrair_conteudo_da_tag(texto, tag_alvo)\n",
+    "\n",
+    "aux = aux.replace('\\n','')\n",
+    "aux= aux.split(\" \")\n",
+    "name=None\n",
+    "pokeId=None\n",
+    "cout=1\n",
+    "for i in range(len(aux)):\n",
+    "    if len(aux[i]) != 0 and cout==2:\n",
+    "        pokeId=aux[i]\n",
+    "        break\n",
+    "    elif len(aux[i]) != 0 and name == None:\n",
+    "        name=aux[i]\n",
+    "        cout=2\n",
+    "poke = Pokemon(pokeId,name, typePoke)\n",
+    "print(poke)\n",
+    "#cleardata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ef1a9b30-c86c-4e49-9c49-f5f9d0d67c24",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tag encontrada: p\n",
+      "Tag encontrada: b\n",
+      "Tag encontrada: a\n",
+      "Lista de tags encontradas: ['p', 'b', 'a']\n",
+      "Conteúdo dentro da tag <p>: Isso é um exemplo de HTML.\n",
+      "Conteúdo dentro da tag <p class=\"paragrafo-exemplo\" id=\"paragrafo1\">: Isso é um exemplo de HTML.\n"
+     ]
+    }
+   ],
+   "source": [
+    "texto_html = \"<p>Isso é um exemplo <b>de</b> HTML.</p><a href='#'>Link</a>\"\n",
+    "tags_encontradas = extrair_tags_html(texto_html)\n",
+    "\n",
+    "for tag in tags_encontradas:\n",
+    "    print(f'Tag encontrada: {tag.name}')\n",
+    "\n",
+    "lista_de_tags = [tag.name for tag in tags_encontradas]\n",
+    "print(f'Lista de tags encontradas: {lista_de_tags}')\n",
+    "\n",
+    " \n",
+    "\n",
+    "texto_html = \"<p>Isso é um exemplo <b>de</b> HTML.</p><a href='#'>Link</a>\"\n",
+    "tag_alvo = 'p' \n",
+    "conteudo_da_tag = extrair_conteudo_da_tag(texto_html, tag_alvo)\n",
+    "\n",
+    "if conteudo_da_tag is not None:\n",
+    "    print(f'Conteúdo dentro da tag <{tag_alvo}>: {conteudo_da_tag}')\n",
+    "else:\n",
+    "    print(f'Tag <{tag_alvo}> não encontrada.')\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    " \n",
+    "    \n",
+    "texto_html = \"\"\"\n",
+    "<div>\n",
+    "  <p class=\"paragrafo-exemplo\" id=\"paragrafo1\">Isso é um exemplo <b>de</b> HTML.</p>\n",
+    "  <p class=\"paragrafo-exemplo\" id=\"paragrafo2\">Outro parágrafo <a href=\"#\">com link</a>.</p>\n",
+    "</div>\n",
+    "\"\"\"\n",
+    "\n",
+    "tag_alvo = 'p'\n",
+    "classe_alvo = 'paragrafo-exemplo'\n",
+    "id_alvo = 'paragrafo1'\n",
+    "\n",
+    "conteudo_da_tag = extrair_conteudo_por_classe_e_id(texto_html, tag_alvo, classe_alvo, id_alvo)\n",
+    "\n",
+    "if conteudo_da_tag is not None:\n",
+    "    print(f'Conteúdo dentro da tag <{tag_alvo} class=\"{classe_alvo}\" id=\"{id_alvo}\">: {conteudo_da_tag}')\n",
+    "else:\n",
+    "    print(f'Tag <{tag_alvo} class=\"{classe_alvo}\" id=\"{id_alvo}\"> não encontrada.')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "4cf7ae51",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chikorita Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Bayleef Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Meganium Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Cyndaquil Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Quilava Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Typhlosion Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Totodile Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Croconaw Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Feraligatr Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Pidgey Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Pidgeotto Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Pidgeot Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Spearow Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Fearow Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Hoothoot Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Noctowl Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Rattata Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Raticate Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Sentret Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Furret Pokédex: stats, moves, evolution &amp; locations | Pokémon Database\n",
-      "Dados lidos do arquivo 'resultado.txt':\n"
+      "['', '', '', '', '', 'Bulbasaur', '', '', '', '', '', '', '', 'is', 'a', '', '', '', '', '', '', '', '', 'Grass', '', '', '', '', '', '', '', '/', '', '', '', '', '', '', '', '', 'Poison', '', '', '', '', '', '', '', 'type', 'Pokémon', 'introduced', 'in', '', '', '', '', '', '', '', '', 'Generation', '1', '', '', '', '', '', '', '', '.', '', '', '']\n"
      ]
     }
    ],
    "source": [
     "quantidade = get_info_directory()\n",
+    "aux = None\n",
     "for i in range(quantidade):\n",
     "    with open(f'data/poke{i}.html', 'r') as arquivo:\n",
     "        linhas = arquivo.readlines()\n",
-    "    for index in range(len(linhas)):\n",
-    "        if index == 5:\n",
-    "            print(linhas[index].strip()) \n",
-    "            break"
+    "        aux=''.join(linhas)\n",
+    "#extrair_conteudo_por_classe_e_id(texto, tag_alvo, classe_alvo=None, id_alvo=None)\n",
+    "typePoke=[]\n",
+    "teste = extrair_conteudo_da_tag(aux, \"p\")\n",
+    "teste = teste.replace(\"\\n\",\"\")\n",
+    "teste = teste.split(\" \")\n",
+    "print(teste)\n",
+    "\n",
+    "#extrair_conteudo_da_tag(texto, tag_alvo)\n",
+    "#cleardata()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f932e4d6",
+   "id": "de92a59a-20ea-45e5-a932-fdcbae679829",
    "metadata": {},
    "outputs": [],
    "source": []
