--- a/web-scraping/pokedex_digger.ipynb
+++ b/web-scraping/pokedex_digger.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c988d69e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "b9797ad3-2a96-4334-9c8f-9fc4f4e35362",
    "metadata": {},
    "outputs": [],
@@ -43,11 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "id": "62a4a43e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "pokeType = ['Water','Electric','Dark','Fairy','Fire','Flying','Ice','Rock','Ground','Steel','Bug','Normal','Grass','Fighting','Poison',' middot ','Ghost','Psychic','Dragon']\n",
     "games = [\n",
     "        'gold-silver-crystal',\n",
     "        'red-blue-yellow',\n",
@@ -58,6 +59,17 @@
     "        'black-white',\n",
     "        'black-white-2'\n",
     "    ]\n",
+    "def extrair_id(texto):\n",
+    "    soup = BeautifulSoup(texto, 'html.parser')\n",
+    "    ids = [element['id'] for element in soup.find_all(id=True)]\n",
+    "    return ids\n",
+    "\n",
+    "def extrair_class(texto):\n",
+    "    soup = BeautifulSoup(texto, 'html.parser')\n",
+    "    classes = [css_class for element in soup.find_all(class_=True) for css_class in element[\"class\"]]\n",
+    "    classes = list(set(classes))\n",
+    "    return classes\n",
+    "\n",
     "def extrair_tags_html(texto):\n",
     "    soup = BeautifulSoup(texto, 'html.parser')\n",
     "    tags_encontradas = soup.find_all()\n",
@@ -177,295 +189,9 @@
    "execution_count": null,
    "id": "59104da0",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pokedexes disponíveis:\n",
-      "1 - gold silver crystal\n",
-      "2 - red blue yellow\n",
-      "3 - firered leafgreen\n",
-      "4 - ruby sapphire emerald\n",
-      "5 - platinum\n",
-      "6 - heartgold soulsilver\n",
-      "7 - black white\n",
-      "8 - black white 2\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "selecione a pokedex que você deseja:\n",
-      " 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total: 251 pokémons\n",
-      "Chikorita\n",
-      "Bayleef\n",
-      "Meganium\n",
-      "Cyndaquil\n",
-      "Quilava\n",
-      "Typhlosion\n",
-      "Totodile\n",
-      "Croconaw\n",
-      "Feraligatr\n",
-      "Pidgey\n",
-      "Pidgeotto\n",
-      "Pidgeot\n",
-      "Spearow\n",
-      "Fearow\n",
-      "Hoothoot\n",
-      "Noctowl\n",
-      "Rattata\n",
-      "Raticate\n",
-      "Sentret\n",
-      "Furret\n",
-      "Pichu\n",
-      "Pikachu\n",
-      "Raichu\n",
-      "Caterpie\n",
-      "Metapod\n",
-      "Butterfree\n",
-      "Weedle\n",
-      "Kakuna\n",
-      "Beedrill\n",
-      "Ledyba\n",
-      "Ledian\n",
-      "Spinarak\n",
-      "Ariados\n",
-      "Geodude\n",
-      "Graveler\n",
-      "Golem\n",
-      "Zubat\n",
-      "Golbat\n",
-      "Crobat\n",
-      "Cleffa\n",
-      "Clefairy\n",
-      "Clefable\n",
-      "Igglybuff\n",
-      "Jigglypuff\n",
-      "Wigglytuff\n",
-      "Togepi\n",
-      "Togetic\n",
-      "Sandshrew\n",
-      "Sandslash\n",
-      "Ekans\n",
-      "Arbok\n",
-      "Dunsparce\n",
-      "Mareep\n",
-      "Flaaffy\n",
-      "Ampharos\n",
-      "Wooper\n",
-      "Quagsire\n",
-      "Gastly\n",
-      "Haunter\n",
-      "Gengar\n",
-      "Unown\n",
-      "Onix\n",
-      "Steelix\n",
-      "Bellsprout\n",
-      "Weepinbell\n",
-      "Victreebel\n",
-      "Hoppip\n",
-      "Skiploom\n",
-      "Jumpluff\n",
-      "Paras\n",
-      "Parasect\n",
-      "Poliwag\n",
-      "Poliwhirl\n",
-      "Poliwrath\n",
-      "Politoed\n",
-      "Magikarp\n",
-      "Gyarados\n",
-      "Goldeen\n",
-      "Seaking\n",
-      "Slowpoke\n",
-      "Slowbro\n",
-      "Slowking\n",
-      "Oddish\n",
-      "Gloom\n",
-      "Vileplume\n",
-      "Bellossom\n",
-      "Drowzee\n",
-      "Hypno\n",
-      "Abra\n",
-      "Kadabra\n",
-      "Alakazam\n",
-      "Ditto\n",
-      "Pineco\n",
-      "Forretress\n",
-      "Nidoran\n",
-      "Nidorina\n",
-      "Nidoqueen\n",
-      "Nidoran\n",
-      "Nidorino\n",
-      "Nidoking\n",
-      "Yanma\n",
-      "Sunkern\n",
-      "Sunflora\n",
-      "Exeggcute\n",
-      "Exeggutor\n",
-      "Sudowoodo\n",
-      "Wobbuffet\n",
-      "Venonat\n",
-      "Venomoth\n",
-      "Scyther\n",
-      "Scizor\n",
-      "Pinsir\n",
-      "Heracross\n",
-      "Koffing\n",
-      "Weezing\n",
-      "Grimer\n",
-      "Muk\n",
-      "Magnemite\n",
-      "Magneton\n",
-      "Voltorb\n",
-      "Electrode\n",
-      "Aipom\n",
-      "Snubbull\n",
-      "Granbull\n",
-      "Vulpix\n",
-      "Ninetales\n",
-      "Growlithe\n",
-      "Arcanine\n",
-      "Stantler\n",
-      "Marill\n",
-      "Azumarill\n",
-      "Diglett\n",
-      "Dugtrio\n",
-      "Mankey\n",
-      "Primeape\n",
-      "Meowth\n",
-      "Persian\n",
-      "Psyduck\n",
-      "Golduck\n",
-      "Machop\n",
-      "Machoke\n",
-      "Machamp\n",
-      "Tyrogue\n",
-      "Hitmonlee\n",
-      "Hitmonchan\n",
-      "Hitmontop\n",
-      "Girafarig\n",
-      "Tauros\n",
-      "Miltank\n",
-      "Magby\n",
-      "Magmar\n",
-      "Smoochum\n",
-      "Jynx\n",
-      "Elekid\n",
-      "Electabuzz\n",
-      "MrMime\n",
-      "Smeargle\n",
-      "Farfetchd\n",
-      "Natu\n",
-      "Xatu\n",
-      "Qwilfish\n",
-      "Tentacool\n",
-      "Tentacruel\n",
-      "Krabby\n",
-      "Kingler\n",
-      "Shuckle\n",
-      "Staryu\n",
-      "Starmie\n",
-      "Shellder\n",
-      "Cloyster\n",
-      "Corsola\n",
-      "Remoraid\n",
-      "Octillery\n",
-      "Chinchou\n",
-      "Lanturn\n",
-      "Seel\n",
-      "Dewgong\n",
-      "Lickitung\n",
-      "Tangela\n",
-      "Eevee\n",
-      "Vaporeon\n",
-      "Jolteon\n",
-      "Flareon\n",
-      "Espeon\n",
-      "Umbreon\n",
-      "Horsea\n",
-      "Seadra\n",
-      "Kingdra\n",
-      "Gligar\n",
-      "Delibird\n",
-      "Swinub\n",
-      "Piloswine\n",
-      "Teddiursa\n",
-      "Ursaring\n",
-      "Phanpy\n",
-      "Donphan\n",
-      "Mantine\n",
-      "Skarmory\n",
-      "Doduo\n",
-      "Dodrio\n",
-      "Ponyta\n",
-      "Rapidash\n",
-      "Cubone\n",
-      "Marowak\n",
-      "Kangaskhan\n",
-      "Rhyhorn\n",
-      "Rhydon\n",
-      "Murkrow\n",
-      "Houndour\n",
-      "Houndoom\n",
-      "Slugma\n",
-      "Magcargo\n",
-      "Sneasel\n",
-      "Misdreavus\n",
-      "Porygon\n",
-      "Porygon\n",
-      "Chansey\n",
-      "Blissey\n",
-      "Lapras\n",
-      "Omanyte\n",
-      "Omastar\n",
-      "Kabuto\n",
-      "Kabutops\n",
-      "Aerodactyl\n",
-      "Snorlax\n",
-      "Bulbasaur\n",
-      "Ivysaur\n",
-      "Venusaur\n",
-      "Charmander\n",
-      "Charmeleon\n",
-      "Charizard\n",
-      "Squirtle\n",
-      "Wartortle\n",
-      "Blastoise\n",
-      "Articuno\n",
-      "Zapdos\n",
-      "Moltres\n",
-      "Raikou\n",
-      "Entei\n",
-      "Suicune\n",
-      "Dratini\n",
-      "Dragonair\n",
-      "Dragonite\n",
-      "Larvitar\n",
-      "Pupitar\n",
-      "Tyranitar\n",
-      "Lugia\n",
-      "Hooh\n",
-      "Mewtwo\n",
-      "Mew\n",
-      "Celebi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -489,22 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "1ef79728",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O diretório 'data/' foi excluído com sucesso. seu conteudo também, com 5 arquivos\n",
-      "100.0%...\n",
-      "Terminado! com o tempo de 1.04526\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_name_pokes = set_poke_name(catalogar_html(obter_html(get_corret_url(2))))\n",
     "quantidade = 1\n",
@@ -521,42 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "41406eee",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "     Bulbasaur\n",
-      "    \n",
-      "    is a\n",
-      "    \n",
-      "     Grass\n",
-      "    \n",
-      "    /\n",
-      "    \n",
-      "     Poison\n",
-      "    \n",
-      "    type Pokémon introduced in\n",
-      "    \n",
-      "     Generation 1\n",
-      "    \n",
-      "    .\n",
-      "   \n",
-      "#0002 Bulbasaur -> ['Grass', 'Poison']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "quantidade = get_info_directory()\n",
     "aux = None\n",
@@ -566,7 +252,6 @@
     "        aux=''.join(linhas)\n",
     "#extrair_conteudo_por_classe_e_id(texto, tag_alvo, classe_alvo=None, id_alvo=None)\n",
     "typePoke=[]\n",
-    "pokeType = ['Water','Electric','Dark','Fairy','Fire','Flying','Ice','Rock','Ground','Steel','Bug','Normal','Grass','Fighting','Poison',' middot ','Ghost','Psychic','Dragon']\n",
     "for i in pokeType:\n",
     "    sup=extrair_conteudo_por_classe_e_id(aux, \"a\", i.lower(), None)\n",
     "    if sup != None:\n",
@@ -599,30 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ef1a9b30-c86c-4e49-9c49-f5f9d0d67c24",
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
      "source_hidden": true
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tag encontrada: p\n",
-      "Tag encontrada: b\n",
-      "Tag encontrada: a\n",
-      "Lista de tags encontradas: ['p', 'b', 'a']\n",
-      "Conteúdo dentro da tag <p>: Isso é um exemplo de HTML.\n",
-      "Conteúdo dentro da tag <p class=\"paragrafo-exemplo\" id=\"paragrafo1\">: Isso é um exemplo de HTML.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "texto_html = \"<p>Isso é um exemplo <b>de</b> HTML.</p><a href='#'>Link</a>\"\n",
     "tags_encontradas = extrair_tags_html(texto_html)\n",
@@ -668,18 +338,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "4cf7ae51",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['', '', '', '', '', 'Bulbasaur', '', '', '', '', '', '', '', 'is', 'a', '', '', '', '', '', '', '', '', 'Grass', '', '', '', '', '', '', '', '/', '', '', '', '', '', '', '', '', 'Poison', '', '', '', '', '', '', '', 'type', 'Pokémon', 'introduced', 'in', '', '', '', '', '', '', '', '', 'Generation', '1', '', '', '', '', '', '', '', '.', '', '', '']\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "quantidade = get_info_directory()\n",
     "aux = None\n",
@@ -689,19 +353,79 @@
     "        aux=''.join(linhas)\n",
     "#extrair_conteudo_por_classe_e_id(texto, tag_alvo, classe_alvo=None, id_alvo=None)\n",
     "typePoke=[]\n",
-    "teste = extrair_conteudo_da_tag(aux, \"p\")\n",
-    "teste = teste.replace(\"\\n\",\"\")\n",
-    "teste = teste.split(\" \")\n",
-    "print(teste)\n",
-    "\n",
+    "print(aux)\n",
+    "print(\n",
     "#extrair_conteudo_da_tag(texto, tag_alvo)\n",
     "#cleardata()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "de92a59a-20ea-45e5-a932-fdcbae679829",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==============================\n",
+      "ids:\n",
+      "['sitesearch', 'main', 'dex-basics', 'tab-basic-1', 'dex-stats', 'bsa-zone_1642018196755-7_123456', 'dex-evolution', 'dex-flavor', 'dex-moves', 'tab-moves-19', 'tab-moves-18', 'dex-sprites', 'dex-locations', 'dex-lang', 'bsa-zone_1612827518798-2_123456']\n",
+      "==============================\n",
+      "classes:\n",
+      "['sv-tabs-panel-list', 'main-menu-heading', 'header-logo', 'infocard-arrow', 'ent-name', 'type-fx-200', 'type-electric', 'sitesearch-form', 'num-infinity', 'type-normal', 'main-menu-item-search', 'text-pink', 'img-sprite-v1', 'shining-pearl', 'component', 'type-table', 'sitesearch-input', 'yellow', 'cell-name', 'infocard-lg-data', 'brilliant-diamond', 'main-menu-icon', 'sortwrap', 'infocard-lg-img', 'shield', 'list-focus', 'text-small', 'ultra-sun', 'cell-icon', 'type-ice', 'type-table-pokedex', 'cell-med-text', 'sword', 'text-center', 'span-md-6', 'icon-arrow', 'grid-col', 'wrap-right', 'img-fixed', 'grid-row', 'img-sprite-v13', 'barchart-bar', 'lets-go-pikachu', 'white', 'type-cell', 'black-2', 'infocard', 'grid-container', 'type-fx-cell', 'type-bug', 'type-ghost', 'tabset-basics', 'list-nav-title', 'type-abbr', 'moon', 'igame', 'ultra-moon', 'sr-only', 'silver', 'type-water', 'main-menu-item', 'barchart-rank-2', 'list-blank', 'vitals-table', 'type-psychic', 'itype', 'img-sprite-v5', 'main-menu-hr-title', 'sprite-share-link', 'heartgold', 'x', 'crystal', 'leafgreen', 'red', 'entity-nav-next', 'span-lg-4', 'main-footer', 'img-sprite-v18', 'panel', 'span-lg-8', 'type-fire', 'type-grass', 'cell-barchart', 'pearl', 'active', 'main-menu-hr', 'type-poison', 'text-blue', 'sapphire', 'barchart-rank-3', 'main-menu-title', 'entity-nav', 'infocard-list-evo', 'tabset-moves-game', 'main-content', 'sprites-table', 'sitesearch-results', 'panel-nav', 'type-fairy', 'soulsilver', 'blue', 'img-sprite-v3', 'sv-tabs-onetab', 'violet', 'type-fx-100', 'type-steel', 'y', 'etymology', 'sv-tabs-panel', 'icon-arrow-e', 'span-lg-6', 'poison', 'resp-scroll', 'cell-num', 'gold', 'sv-tabs-wrapper', 'img-sprite', 'type-fighting', 'span-md-12', 'sprites-history-table', 'img-sprite-v8', 'alpha-sapphire', 'white-2', 'sv-tabs-tab', 'span-lg-12', 'type-icon', 'lets-go-eevee', 'type-fx-25', 'sv-tabs-tab-list', 'type-flying', 'main-menu-title-long', 'cell-total', 'scarlet', 'type-fx-50', 'ruby', 'omega-ruby', 'diamond', 'sorting', 'data-table', 'type-dragon', 'main-menu-sub', 'type-ground', 'grass', 'emerald', 'list-nav', 'legends-arceus', 'black', 'type-rock', 'input-text', 'text-muted', 'sun', 'platinum', 'main-header', 'main-menu', 'type-dark', 'main-menu-list', 'text', 'img-sprite-v11', 'firered']\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "tag: \n",
+      "id: main\n",
+      "class: \n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'get_text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [30], line 19\u001b[0m\n\u001b[1;32m     15\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(answer, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhtml.parser\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     17\u001b[0m elemento_id \u001b[38;5;241m=\u001b[39m soup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmeu_id\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m conteudo \u001b[38;5;241m=\u001b[39m \u001b[43melemento_id\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_text\u001b[49m(separator\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)  \u001b[38;5;66;03m# Use '\\n' como separador para manter a estrutura original\u001b[39;00m\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(sup)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get_text'"
+     ]
+    }
+   ],
+   "source": [
+    "cout = 1\n",
+    "game = 1\n",
+    "url = get_corret_url(game)\n",
+    "answer = catalogar_html(obter_html(url))\n",
+    "print(\"=\"*30)\n",
+    "print(\"ids:\")\n",
+    "print(extrair_id(aux))\n",
+    "print(\"=\"*30)\n",
+    "print(\"classes:\")\n",
+    "print(extrair_class(aux))\n",
+    "tag_request = input(\"tag:\")\n",
+    "id_request = input(\"id:\")\n",
+    "class_request = input(\"class:\")\n",
+    "\n",
+    "soup = BeautifulSoup(answer, 'html.parser')\n",
+    "\n",
+    "elemento_id = soup.find(id='meu_id')\n",
+    "\n",
+    "conteudo = elemento_id.get_text(separator='\\n')  # Use '\\n' como separador para manter a estrutura original\n",
+    "\n",
+    "print(conteudo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66bf68f0-eb31-4aa2-acf8-e3e936fd1d96",
    "metadata": {},
    "outputs": [],
    "source": []
